# AerisLab

./: .gitignore  CLAUDE.md  README.md  __init__.py  main.py  pyproject.toml  run_simulation.py  sim.py  simulation.csv  simulation_log.csv  syntax_test.py
.github/workflows/: test.yml
AerisLab/: constraints.py  forces.py  mathutil.py  plotting.py  world.py
OLD/: main.py
OLD/fall_simulator/: __init__.py
OLD/fall_simulator/dynamics/: forces.py  rigid_body.py
OLD/fall_simulator/integration/: __init__.py  euler.py  fully_implicit.py  rk4.py
OLD/fall_simulator/multibody/: __init__.py  cable.py
OLD/fall_simulator/utils/: plotting.py  reporting.py
OLD/multibody/: __init__.py  forces.py  integration.py  quaternions.py  rigid_body.py
core/: __init__.py  body.py  collision.py  data_logger.py  force.py  forces.py  integrators.py  joints.py  math_utils.py  visualization.py  world.py
core/v2/: f2.py  int2.py  mathutil2.py  rb2.py  world.py
docs/: AERISLAB_REVIEW.md  AERISLAB_REVIEW_PLAIN.md  EVALUATION_AND_ROADMAP.md  GETTING_STARTED.md  GUIDE.md  Gemini.MD  Gemini_world_refactor.md  HOW_TO_WORK.md  HOW_TO_WORK_EXPANDED.md  LEARNING_PRIORITIES.md  ML_SURROGATE_DESIGN.md  NUMERICAL_METHODS_LEARNING.md  Parachute.md  README.md  ROADMAP.md  SOFTWARE_EVALUATION.md  USER_GUIDE.md  WORKING_PART_TIME.md  WORK_PLAN.md
docs/superpowers/plans/: 2026-05-22-engine-core-state-vector.md  2026-05-22-orchestration-simulator-output.md  2026-05-22-parachute-nn-model.md
docs/superpowers/specs/: 2026-05-22-engine-core-state-vector-design.md  2026-05-22-orchestration-simulator-output-design.md  2026-05-22-parachute-nn-model-design.md
examples/: AerisLab.code-workspace  continuous_inflation_system_demo.py  knacke_system_demo.py  parachute_components.py  parachute_fixed.py  parachute_ivp.py  parachute_moving.py  plot_parachute_logs.py  postprocessing_template.ipynb  simple_drop.py  simple_drop_initial_vel.py  simple_drop_test.py
examples/Old/: continuous_inflation_system_demo.py  improved_demo.py  simple_drop.py  simple_drop_initial_vel.py
examples/architecture/: hybrid_ivp_solver_explained.ipynb  hybrid_solver_explained.ipynb  simulation_explained.ipynb  solver_walkthrough.ipynb
examples/scenarios/: 01_simple_drop.ipynb  01_simple_drop.py  02_parachute_system.ipynb  02_parachute_system.py  03_scenario_options.py
fall_simulator/: __init__.py
fall_simulator/dynamics/: __init__.py  rigid_body.py
fall_simulator/integration/: __init__.py  fully_implicit.py  implicit.py  semi_implicit.py
fall_simulator/multibody/: cable.py
fall_simulator/utils/: __init__.py  plotting.py  quaternions.py
hybridsim/: __init__.py  body.py  constraints.py  contact.py  forces.py  joint.py  joints.py  logger.py  mathutil.py  solver.py  world.py
hybridsim/examples/: parachute.py  parachute_fixed.py  parachute_ivp.py
integrators/: __init__.py  rigid_integrators.py
kane/: manual_kane.py
logs/: parachute_fixed.csv  parachute_ivp.csv
media/logs/: parachute_ivp.csv
modeling/: forces.py
scripts/: animation_2.py  animation_3.py  animation_4.py  animation_5.py  animation_test.py  custom_plot.py  simple_plot_forces.py  syntax_test.py
scripts/Junk/: animation_2.py  animation_3.py  animation_test.py  main.py  simple_plot.py  syntax_test.py  typing_test.py
scripts/Parachute_tools/: Permeability_MIL-C-7020-III.csv  Permeability_MIL-C-7020-III_v3.csv  porosity_evaluation.py  porosity_notes.md
sim/: __init__.py  visualization.py  world.py
src/AerisLab/: __init__.py  forces.py
src/aerislab/: __init__.py  body.py  forces.py  logger.py  solver.py  world.py
src/aerislab/api/: scenario.py
src/aerislab/components/: __init__.py  base.py  parachute.py  payload.py  standard.py  system.py
src/aerislab/core/: __init__.py  protocols.py  simulation.py  solver.py
src/aerislab/dynamics/: __init__.py  body.py  constraints.py  forces.py  joints.py
src/aerislab/dynamics/not_in_use/: parachute.py  parachute_v2.py
src/aerislab/models/: __init__.py
src/aerislab/models/aerodynamics/: __init__.py  parachute_models.py
src/aerislab/models/atmosphere/: __init__.py  base.py  isa.py
src/aerislab/utils/: __init__.py  io.py  orientation.py  validation.py
src/aerislab/visualization/: dashboard.py  plotting.py
tests/: conftest.py  test_body.py  test_constraints.py  test_contact.py  test_forces.py  test_improved.py  test_integration_example.py  test_ivp.py  test_logger.py  test_numerics_freefall.py  test_parachute_models.py  test_simulation.py  test_solver.py  test_solver_fixed.py  test_solver_improved.py  test_solver_ivp.py  test_stop_on_ground.py  test_visualization.py
tests/models/atmosphere/: test_ISA.py
tests/solver/: test_state_protocol.py
tests/verification/: conftest.py  test_aerodynamics.py  test_baumgarte_decay.py  test_components.py  test_constraint_validation.py  test_constraints.py  test_convergence.py  test_dof_lock.py  test_dof_lock_rotation.py  test_energy.py  test_energy_constrained.py  test_frame_transforms.py  test_kinematics.py  test_momentum.py  test_multipliers.py  test_rotation.py  test_solver_cross_validation.py  test_world_anchor.py
