[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerislab"
version = "0.1.0"
description = "PhD Research Project: AerisLab"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kaspar", email = "kaspar@example.com" }
]
keywords = ["research", "science", "phd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    # Add your specific project dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",  # Fast linter and formatter replacing black/isort
    "mypy",
]
notebooks = [
    "jupyterlab",
    "ipykernel",
]

[project.urls]
Repository = "https://github.com/kaspar/aerislab"

# --- Tool Configurations ---

[tool.setuptools.packages.find]
where = ["."]  # Assumes source code is in the root or a src/ directory
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"